src/test/fail/if_with_no_value_returned.ly
<@lily function f() {} if f():f() @>
